@@ -137,11 +137,13 @@
 #define PMKCONF_BIN_EGREP	"BIN_EGREP"
 #define PMKCONF_BIN_GREP	"BIN_GREP"
 #define PMKCONF_BIN_INSTALL	"BIN_INSTALL"
+#define PMKCONF_BIN_LEX		"BIN_LEX"
 #define PMKCONF_BIN_PKGCONFIG	"BIN_PKGCONFIG"
 #define PMKCONF_BIN_RANLIB	"BIN_RANLIB"
 #define PMKCONF_BIN_SH		"BIN_SH"
 #define PMKCONF_BIN_STRIP	"BIN_STRIP"
 #define PMKCONF_BIN_TAR		"BIN_TAR"
+#define PMKCONF_BIN_YACC	"BIN_YACC"
 
 #define PMKCONF_HW_BYTEORDER	"HW_BYTEORDER"
 
